# byzanz-gui

./: README.md  meson.build  org.gnome.Byzanz-Gui.json
data/: meson.build  org.gnome.Byzanz-Gui.appdata.xml.in  org.gnome.Byzanz-Gui.desktop.in  org.gnome.Byzanz-Gui.gschema.xml
po/: POTFILES  ha.po  meson.build
src/: byzanz-gui-window.c  byzanz-gui-window.h  byzanz-gui-window.ui  byzanz-gui-window.ui~  byzanz-gui.gresource.xml  main.c  meson.build
